--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,110 @@
+:root {
+  --main-background-color: hsl(240, 78%, 98%);
+  --main-background-color-dark: hsl(234, 14%, 74%);
+  --main-background-accent: hsl(233, 13%, 49%);
+  --main-font-color-dark: hsl(232, 13%, 33%);
+}
+* {
+    font-size: 15px;
+    font-weight: 700;
+    font-family: 'Montserrat', sans-serif;
+}
+
+body {
+  background-color: var(--main);
+
+}
+.container {
+    display: grid;
+    grid-template-columns: 30% 30% 30%;
+}
+
+.container .grid-item:nth-of-type(odd) {
+  background-color: #ffff;
+
+}
+.grid-item {
+    display: inline-block;
+    margin: 5%;
+    padding: 10%;
+    border-radius: 10%;
+}
 /* Primary linear */
 .primary-linear {
-    background: linear-gradient(hsl(236, 72%, 79%), hsl(237, 63%, 64%))
+    background: linear-gradient(hsl(236, 72%, 79%), hsl(237, 63%, 64%));
+    color: white;
+}
+
+#pricing {
+    align-items: center;
+}
+
+.pricing-main {
+  font-size: 3em;
+  font-weight: bold;
+  
 }
 /* 
-### Neutral
+
+/* Switch */
+.pricing-options {
+    padding: 5%;
+}
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+  
+  .switch input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+    
+  }
+  
+
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
+/* ### Neutral
 
 - Very Light Grayish Blue: hsl(240, 78%, 98%)
 - Light Grayish Blue: hsl(234, 14%, 74%)
@@ -12,11 +113,8 @@
 
 ## Typography
 
-### Body Copy
-
-- Font size: 15px
 
 ### Font
 
 - Family: [Montserrat](https://fonts.google.com/specimen/Montserrat)
-- Weight: 700 */
+- Weight: 700 */ 
