--- a/styles.css
+++ b/styles.css
@@ -20,12 +20,17 @@ h3 {
   font-weight: 900;
 }
 
+.tier {
+  padding: 10px 0px;
+  font-weight: 900;
+}
 
 
 .container {
   display: grid;
   flex-wrap: wrap;
-  grid-template-columns: 30% 30% 30%;
+  grid-template-columns: 33% 33% 33%;
+
 }
 
 .container .accent-grid {
@@ -39,6 +44,7 @@ h3 {
   width: 90%;
   text-transform: uppercase;
   letter-spacing: 0.1em;
+
   margin-bottom: 12%;
 }
 .accent-grid .learn-more {
@@ -63,12 +69,10 @@ h3 {
 }
 
 .grid-item {
-    display: inline;
-    margin: 10px;
-
+    display: grid;
+    justify-items: center;
     line-height: 2rem;
-
-    padding: 2%;
+    margin: 3%;
     border-radius: 4%;
     box-shadow: 1px 1px 5px hsl(237, 63%, 64%);
 }
